--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
     <div class="container">
         <h1>NetAppsMaster</h1>
-        <p class="subtitle">精选网络应用集合</p>
+        <p class="subtitle">Ray制作的网页娱乐小玩具，加载可能需要时间</p>
         
         <div class="apps-grid">
             <a href="FlashCv2/index.html" class="app-card">
